1999-04-09  Tom Tromey  <tromey@cygnus.com>

	* automake.texi (Macros): Mention AM_PROG_GCJ.
	(Java Support): New node.
	(Dist): Documented dist_ and nodist_ prefixes.

	* m4/gcj.m4 (AM_PROG_GCJ): Renamed from AC_PROG_GCJ.

	* automake.in (lang_java_finish): Generate .lo rule for `.java'
	files, not `.gcj' files.

	* m4/gcj.m4: New file.
	* m4/Makefile.am (m4data_DATA): Added gcj.m4.

	* automake.in: Register the `java' language.
	(resolve_linker): Handle GCJLINK.
	(lang_java_rewrite): New function.
	(LANG_IGNORE, LANG_PROCESS, LANG_SUBDIR): New constants.
	(lang_c_rewrite): Use new constants.
	(lang_cxx_rewrite): Likewise.
	(lang_header_rewrite): Likewise.
	(lang_yacc_rewrite): Likewise.
	(lang_yaccxx_rewrite): Likewise.
	(lang_lex_rewrite): Likewise.
	(lang_lexxx_rewrite): Likewise.
	(lang_asm_rewrite): Likewise.
	(lang_f77_rewrite): Likewise.
	(lang_ppf77_rewrite): Likewise.
	(lang_ratfor_rewrite): Likewise.
	(lang_objc_rewrite): Likewise.
	(handle_single_transform_list): Likewise.  Handle LANG_SUBDIR
	return from rewrite function.
	(lang_java_finish): New function.
	(register_language): Changed interface and all calls.  Added
	`autodep' settings to various languages.
	(handle_dependencies): Use `autodep' property of language when
	including dependency-tracking code.

1999-04-07  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_texinfo): Indentation fixes.

1999-04-07  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* automake.in (value_to_list): Skip *only* trailing backslashes.

1999-04-07  Pavel Roskin  <pavel_roskin@geocities.com>

	* automake.in (value_to_list): Skip trailing backslashes.

1999-04-07  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* automake.in (handle_texinfo): Add texinfo.tex to config_aux_dir
	when appropriate.
	Reported by Per Cederqvist <ceder@lysator.liu.se>
	(handle_texinfo): Do not define texinfo_tex='.', use
	'$(srcdir)/texinfo.tex' instead; the directory name will be
	properly extracted.
	(require_conf_file_with_line): Fixed typo.
