@@ -19,4 +19,4 @@ PACKAGE = @PACKAGE@
 VERSION = @VERSION@
 
 ## DIST_COMMON comes first so that README can be the very first file.
-DISTFILES = $(DIST_COMMON) $(SOURCES) $(TEXINFOS) $(EXTRA_DIST)
+DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
