@@ -2,9 +2,9 @@ New in 1.4a:
 * Many files (but not all) are correctly handled if they appear in subdirs
   For instance, a _DATA file can appear in a subdir
 * GNU tar is no longer required for `make dist'
-* The usual bug fixes
-* Added support for `dist_' and `nodist_' prefixes to some primaries
+* Added support for `dist_' and `nodist_' prefixes
 * Compiled Java support
+* The usual bug fixes
 
 New in 1.4:
 * Added support for the Fortran 77 programming language.
