@@ -1,5 +1,12 @@
 1999-04-09  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (handle_source_transform): Handle dist and nodist
+	prefixes.
+	(initialize_per_input): Initialize dist_sources.
+	(check_libobjs_sources): Handle dist and nodist prefixes.
+	(generate_makefile): Define DIST_SOURCES.
+	* dist-vars.am (DISTFILES): Reference DIST_SOURCES, not SOURCES.
+
 	* automake.texi (Macros): Mention AM_PROG_GCJ.
 	(Java Support): New node.
 	(Dist): Documented dist_ and nodist_ prefixes.
